--- a/index.html
+++ b/index.html
@@ -40,15 +40,31 @@
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <div class="panel-title">
-                                    <h4>Panel title</h4>
+                                    <h4>Parameters</h4>
                                 </div>
                             </div>
                             <div class="panel-body">
-                                Lorem ipsum...<br/>
-                                Lorem ipsum...<br/>
-                                Lorem ipsum...<br/>
-                                Lorem ipsum...<br/>
-                                Lorem ipsum...<br/>
+                                    <div class="row">
+                                        <div class="col-md-1 col-md-offset-2">Min</div>
+                                        <div class="col-md-5">Value</div>
+                                        <div class="col-md-1">Max</div>
+                                        <div class="col-md-1">Step</div>
+                                    </div>
+                                <form id="params">
+                                    <div id="empty-param" class="row form-group param" hidden>
+                                        <div class="col-md-2"><input class="form-control name-field" type="text" size="1" value=""></div>
+                                        <div class="col-md-1"><input class="form-control" type="text" size="1" value=0></div>
+                                        <div class="col-md-5"><input type="range" name="points" min="0" max="10" step="1"></div>
+                                        <div class="col-md-1"><input class="form-control" type="text" value="10" size="1"></div>
+                                        <div class="col-md-1"><input class="form-control" type="text" value="1" size="1"></div>
+                                        <div class="col-md-1"><input class="btn btn-danger remove-param" type="button" value="Remove"></div>
+                                    </div>
+                                </form>
+                                <div class="row">
+                                    <div class="col-md-3">
+                                        <input id="add-param" class="btn btn-success btn-block" type="button" value="Add Parameter">
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="panel panel-default">
