Disable disable dragging items from main list to sub-lists

--- a/index.html
+++ b/index.html
@@ -251,9 +251,10 @@ class DayFilterWidget(Composite):
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
         <!-- Specific Libs: fileTree, panels, ... -->
+        <script src="vendor/jquery.mjs.nestedSortable.js"></script>
         <script src="https://unpkg.com/split.js/split.min.js"></script>
         <script src="vendor/jstree/jstree.min.js"></script>
-        <script src="vendor/lobipanel/js/lobipanel.min.js"></script>
+        <script src="vendor/lobipanel/js/lobipanel.js"></script>
 
         <script src="js/main.js"></script>
     </body>
