--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                                     <h4>Panel title</h4>
                                 </div>
                             </div>
-                            <div class="panel-body">
-                                Lorem ipsum...
+                            <div class="panel-body" style="height: 200px;">
+                                <div id="container" style="height: 90%; width: 98%"></div>
                             </div>
                         </div>
                     </div>
@@ -88,10 +88,16 @@
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+
         <!-- Specific Libs: fileTree, panels, ... -->
         <script src="https://unpkg.com/split.js/split.min.js"></script>
         <script src="vendor/jstree/jstree.min.js"></script>
         <script src="vendor/lobipanel/js/lobipanel.min.js"></script>
+
+        <script>var require = { paths: { 'vs': 'vendor/monaco-editor/min/vs' } };</script>
+		<script src="vendor/monaco-editor/min/vs/loader.js"></script>			
+		<script src="vendor/monaco-editor/min/vs/editor/editor.main.js"></script>
+
 
         <script src="js/main.js"></script>
     </body>
