Made Graphs into Panels and added values as a images of random numbers

--- a/index.html
+++ b/index.html
@@ -166,31 +166,44 @@
 					</ul>
 
 					<div class="tab-content">
-					  <div id="graph" class="tab-pane fade in active">
-					    <h3>Graph</h3>
-                            <div id="list-parent" class="program-operations">
+					    <div id="graph" class="tab-pane fade in active">
+                            <div id="graph-parent">
+
                                 <div class="panel panel-default">
+                                	<div class="panel-heading">
+                                		<div class="panel-title">
+                                			Kat, na1
+                                		</div>
+                                	</div>
                                     <div class="panel-body">
-                                        <img src="img/charts/combined.png" class="img-fluid" alt="Responsive image">
+                                    	<img src="img/charts/combined.png" style="overflow=hidden" class="img-fluid" alt="Responsive image">
+                                    </div>
+                                </div>
+                                <div class="panel panel-default">   
+                               		<div class="panel-heading">
+                                		<div class="panel-title">
+                                			na1
+                                		</div>
+                                	</div>                           	
+                                    <div class="panel-body">
+                                		<img src="img/charts/na1.png" class="img-fluid" alt="Responsive image">
                                     </div>
                                 </div>
                                 <div class="panel panel-default">
+                               		<div class="panel-heading">
+                                		<div class="panel-title">
+                                			Kat
+                                		</div>
+                                	</div>     
                                     <div class="panel-body">
-                                    	<img src="img/charts/na1.png" class="img-fluid" alt="Responsive image">
+                                		<img src="img/charts/kat.png" class="img-fluid" alt="Responsive image">
                                     </div>
                                 </div>
-                                                                <div class="panel panel-default">
-                                    <div class="panel-body">
-                                    	<img src="img/charts/kat.png" class="img-fluid" alt="Responsive image">
-                                    </div>
-                                </div>
-                            </div>
-					    
-					  </div>
-					  <div id="values" class="tab-pane fade">
-					    <h3>Menu 1</h3>
-					    <p>Some content in menu 1.</p>
-					  </div>
+                            </div>					    
+					  	</div>
+					    <div id="values" class="tab-pane fade">
+					        <img src="img/charts/values.png" class="img-fluid" alt="Responsive image">
+					    </div>
 					</div>
                 </div>
             </div>
