--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                     <h4>Raw File Snapshort</h4>
                                 </div>
                             </div>
-                            <div class="panel-body" style="height: 400px;">
+                            <div class="panel-body" style="height: 300px;">
                                 <div id="container" style="height: 90%; width: 98%"></div>
                             </div>
                         </div>
@@ -176,7 +176,7 @@
                                 		</div>
                                 	</div>
                                     <div class="panel-body">
-                                    	<img src="img/charts/combined.png" style="overflow=hidden" class="img-fluid" alt="Responsive image">
+                                    	<img style="width: 100%; height:auto;" src="img/charts/combined.png" class="img-fluid" alt="Responsive image">
                                     </div>
                                 </div>
                                 <div class="panel panel-default">   
@@ -186,7 +186,7 @@
                                 		</div>
                                 	</div>                           	
                                     <div class="panel-body">
-                                		<img src="img/charts/na1.png" class="img-fluid" alt="Responsive image">
+                                		<img style="width: 100%; height:auto;" src="img/charts/na1.png" class="img-fluid" alt="Responsive image">
                                     </div>
                                 </div>
                                 <div class="panel panel-default">
@@ -196,7 +196,7 @@
                                 		</div>
                                 	</div>     
                                     <div class="panel-body">
-                                		<img src="img/charts/kat.png" class="img-fluid" alt="Responsive image">
+                                		<img style="width: 100%; height:auto;" src="img/charts/kat.png" class="img-fluid" alt="Responsive image">
                                     </div>
                                 </div>
                             </div>					    
