windows error with lower/upper case file endings

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                             </div>					    
 					  	</div>
 					    <div id="values" class="tab-pane fade">
-					        <img src="img/charts/values.png" class="img-fluid" alt="Responsive image">
+					        <img src="img/charts/rawvalues.png" class="img-fluid" alt="Responsive image">
 					    </div>
 					</div>
                 </div>
