--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <div class="panel-title">
-                                    <h4>Raw File Snapshort</h4>
+                                    <h4>Raw File Snapshot</h4>
                                 </div>
                             </div>
                             <div class="panel-body" style="height: 300px;">
