--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </div>
                     <ul class="nav navbar-nav">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" >File</a>
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" >Project</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                               <li><a class="dropdown-item" href="#">New</a></li>
                               <li><a class="dropdown-item" href="#">Open</a></li>
