translate panel to english

--- a/index.html
+++ b/index.html
@@ -136,31 +136,31 @@
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <div class="panel-title">
-                                    <h4>Messpunkte</h4>
+                                    <h4>Measurement Points</h4>
                                 </div>
                             </div>
                             <div class="panel-body">
                                 <form>
                                   <div class="form-group row">
-                                    <label for="inputStart" class="col-md-7 col-form-label">Start-Zeit</label>
+                                    <label for="inputStart" class="col-md-7 col-form-label">Start-Point</label>
                                     <div class="col-md-3">
                                       <input type="text" class="form-control" id="inputStart" value="0.00">
                                     </div>
                                   </div>
                                   <div class="form-group row">
-                                    <label for="inputStart" class="col-md-7 col-form-label">End-Zeit</label>
+                                    <label for="inputStart" class="col-md-7 col-form-label">End-Point</label>
                                     <div class="col-md-3">
                                       <input type="text" class="form-control" id="inputStart" value="20.00">
                                     </div>
                                   </div>
                                   <div class="form-group row">
-                                    <label for="inputCount" class="col-md-7 col-form-label">Anzahl der Messungen</label>
+                                    <label for="inputCount" class="col-md-7 col-form-label">Count of Measurement Point</label>
                                     <div class="col-md-3">
                                       <input type="text" class="form-control" id="inputCount" value="10">
                                     </div>
                                   </div>
                                   <div class="form-group row">
-                                    <label for="inputFunc" class="col-md-7 col-form-label">Messfunkiton</label>
+                                    <label for="inputFunc" class="col-md-7 col-form-label">Measurementfunction</label>
                                     <div class="col-md-3">
                                       <select id="inputFunc" class="form-control">
                                         <option selected>mfcn1</option>
@@ -170,13 +170,13 @@
                                     </div>
                                   </div>
                                   <div class="form-group row">
-                                    <label for="inputFuncMin" class="col-md-7 col-form-label">MessfunkitonMin</label>
+                                    <label for="inputFuncMin" class="col-md-7 col-form-label">MeasurementFuncMin</label>
                                     <div class="col-md-3">
                                       <input type="text" class="form-control" id="inputFuncMin" value="0">
                                     </div>
                                   </div>
                                   <div class="form-group row">
-                                    <label for="inputFuncMax" class="col-md-7 col-form-label">MessfunkitonMax</label>
+                                    <label for="inputFuncMax" class="col-md-7 col-form-label">MeasurementFuncMax</label>
                                     <div class="col-md-3">
                                       <input type="text" class="form-control" id="inputFuncMax" value="1">
                                     </div>
