links to modelbrowser

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" >Project</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <li><a class="dropdown-item" href="#">New</a></li>
-                              <li><a class="dropdown-item" href="#">Open</a></li>
+                              <li><a class="dropdown-item" href="modelbrowser.html">New</a></li>
+                              <li><a class="dropdown-item" href="modelbrowser.html">Open</a></li>
                               <li><a class="dropdown-item" href="#">Import</a></li>
                               <li role="separator" class="divider"></li>
                               <li><a class="dropdown-item" href="#">Save All</a></li>
