link buttons in modelbrowser to index.html

--- a/modelbrowser.html
+++ b/modelbrowser.html
@@ -94,8 +94,8 @@
             </div>
             <div class="col-md-3">
                 <div class="actions">
-                    <button type="button" class="btn btn-success">Open</button>
-                    <button type="button" class="btn btn-secondary">Cancel</button>
+                    <a href="index.html" type="button" class="btn btn-default btn-success">Open</a>
+                    <a href="index.html" type="button" class="btn btn-default btn-secondary">Cancel</a>
                 </div>
             </div>
         </div>
