remove useless navbar entries

--- a/index.html
+++ b/index.html
@@ -48,19 +48,8 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">View</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <li><a class="dropdown-item" href="#">Allways in Front</a></li>
                               <li><a class="dropdown-item" href="#">Full Screen</a></li>
-                              <li role="separator" class="divider"></li>
-                              <li><a class="dropdown-item" href="#">Open Model-Browser</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Model</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Experiment</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
