--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                 </form>
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <input id="add-param" class="btn btn-success btn-block" type="button" value="Add Parameter">
+                                        <button type="button" id="add-param" class="btn btn-success btn-block">Add Parameter</button>
                                     </div>
                                 </div>
                             </div>
