--- a/index.html
+++ b/index.html
@@ -293,9 +293,9 @@
 	                        <li class="nav-item dropdown">
 	                            <a class="nav-link dropdown-toggle" href="#" id="valuesDropdown" role="button" data-toggle="dropdown" >Export as</a>
 	                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-	                              <li><a class="dropdown-item" href="hci-project/exportfiles/Daten.xlsx" download="proposed_file_name">Excel</a></li>
-	                              <li><a class="dropdown-item" href="hci-project/exportfiles/Daten.csv" download="proposed_file_name">CSV</a></li>
-	                              <li><a class="dropdown-item" href="hci-project/exportfiles/Daten.txt" download="proposed_file_name">TXT</a></li>
+	                              <li><a class="dropdown-item" href="/exportfiles/Daten.xlsx" download>Excel</a></li>
+	                              <li><a class="dropdown-item" href="/exportfiles/Daten.csv" download>CSV</a></li>
+	                              <li><a class="dropdown-item" href="/exportfiles/Daten.txt" download>TXT</a></li>
 	                            </ul>
 	                        </li>
                             <img src="img/charts/rawvalues.png" class="img-fluid" alt="Responsive image">
