Add loading effect when changing parameters

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                         <div class="col-md-2"><input class="form-control name-field" type="text" size="1" value=""></div>
                                         <div class="col-md-1"><input class="form-control" type="text" size="1" value=0></div>
                                         <div class="col-md-4"><input class="form-control" type="range" name="points" min="0" max="10" step="1"></div>
-                                        <div class="col-md-1"><input class="form-control" type="text" value="5" size="1"></div>
+                                        <div class="col-md-1"><input class="form-control" type="text" name="points-value" value="5" size="1"></div>
                                         <div class="col-md-1"><input class="form-control" type="text" value="10" size="1"></div>
                                         <div class="col-md-1"><input class="form-control" type="text" value="1" size="1"></div>
                                         <div class="col-md-1"><input class="btn btn-danger remove-param" type="button" value="Remove"></div>
@@ -499,6 +499,7 @@ class DayFilterWidget(Composite):
         <script src="https://unpkg.com/split.js/split.min.js"></script>
         <script src="vendor/jstree/jstree.min.js"></script>
         <script src="vendor/lobipanel/js/lobipanel.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/gasparesganga-jquery-loading-overlay@1.5.4/src/loadingoverlay.min.js"></script>
 
         <script>var require = { paths: { 'vs': 'vendor/monaco-editor/min/vs' } };</script>
         <script src="vendor/monaco-editor/min/vs/loader.js"></script>
