Add functions to edit menu

--- a/index.html
+++ b/index.html
@@ -39,10 +39,13 @@
                               <li><a class="dropdown-item" href="#">Undo</a></li>
                               <li><a class="dropdown-item" href="#">Redo</a></li>
                               <li role="separator" class="divider"></li>
-                              <li><a class="dropdown-item" href="#">Cut</a></li>
-                              <li><a class="dropdown-item" href="#">Copy</a></li>
-                              <li><a class="dropdown-item" href="#">Paste</a></li>
-                              <li><a class="dropdown-item" href="#">Delete</a></li>
+                              <li><a class="dropdown-item" href="#" id="rename">Rename</a></li>
+                              <li><a class="dropdown-item" href="#" id="delete">Delete</a></li>
+                              <li><a class="dropdown-item" href="#" id="clone">Clone</a></li>
+                              <li role="separator" class="divider"></li>
+                              <li><a class="dropdown-item" href="#" id="cut">Cut</a></li>
+                              <li><a class="dropdown-item" href="#" id="copy">Copy</a></li>
+                              <li><a class="dropdown-item" href="#" id="paste">Paste</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
