--- a/modelbrowser.html
+++ b/modelbrowser.html
@@ -13,6 +13,9 @@
 </head>
 <body>
     <div class="modelbrowser container">
+        <h1>
+            Create Project from existing Model
+        </h1>
         <div class="row vertical-align">
             <div class="col-md-6">
                 <h1>
@@ -56,8 +59,8 @@
                             <td>10815</td>
                         </tr>
                         <tr>
-                            <td>Eagle Obesity</td>
-                            <td>Wheatly</td>
+                            <td>Strontium Selenate Synthesis</td>
+                            <td>John</td>
                             <td>851</td>
                         </tr>
                         <tr>
@@ -92,9 +95,10 @@
             <div class="col-md-9">
 
             </div>
-            <div class="col-md-3">
+            <div class="col-md-5">
                 <div class="actions">
-                    <a href="index.html" type="button" class="btn btn-default btn-success">Open</a>
+                    <a href="index.html" type="button" class="btn btn-default btn-success">Create Project</a>
+                    <a href="index.html" type="button" class="btn btn-default btn-success">Open Local Model</a>
                     <a href="index.html" type="button" class="btn btn-default btn-secondary">Cancel</a>
                 </div>
             </div>
