add plus symbol for parameter button

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                 </form>
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <button type="button" id="add-param" class="btn btn-success btn-block">Add Parameter</button>
+                                        <button type="button" id="add-param" class="btn btn-success btn-block"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add Parameter</button>
                                     </div>
                                 </div>
                             </div>
