adjust naming of tools in toolboxbrowser

--- a/index.html
+++ b/index.html
@@ -361,9 +361,14 @@
                                         <td>851</td>
                                     </tr>
                                     <tr>
-                                        <td>Messpunkte</td>
+                                        <td>Measurement Points</td>
                                         <td>VPLAN</td>
                                         <td>105</td>
+                                    </tr>
+									<tr>
+                                        <td>Raw File Snapshot</td>
+                                        <td>VPLAN</td>
+                                        <td>60</td>
                                     </tr>
                                     <tr>
                                         <td>Program Operations</td>
