Rename to Vplan names, translate parameter window

--- a/index.html
+++ b/index.html
@@ -97,15 +97,15 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <div class="panel-title">
-                                        <h4>Parameters</h4>
+                                        <h4>Parameter</h4>
                                     </div>
                                 </div>
                                 <div class="panel-body">
                                         <div class="row">
                                             <div class="col-md-1 col-md-offset-2">Min</div>
-                                            <div class="col-md-5">Value</div>
+                                            <div class="col-md-5">Wert</div>
                                             <div class="col-md-1">Max</div>
-                                            <div class="col-md-1">Step</div>
+                                            <div class="col-md-1">Schrittweite</div>
                                         </div>
                                     <form id="params">
                                         <div id="empty-param" class="row form-group param" hidden>
@@ -115,12 +115,12 @@
                                             <div class="col-md-1"><input class="form-control" type="text" name="points-value" value="5" size="1"></div>
                                             <div class="col-md-1"><input class="form-control" type="text" value="10" size="1"></div>
                                             <div class="col-md-1"><input class="form-control" type="text" value="1" size="1"></div>
-                                            <div class="col-md-1"><input class="btn btn-danger remove-param" type="button" value="Remove"></div>
+                                            <div class="col-md-1"><input class="btn btn-danger remove-param" type="button" value="entfernen"></div>
                                         </div>
                                     </form>
                                     <div class="row">
                                         <div class="col-md-3">
-                                            <button type="button" id="add-param" class="btn btn-success btn-block"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add Parameter</button>
+                                            <button type="button" id="add-param" class="btn btn-success btn-block"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Parameter hinzufügen</button>
                                         </div>
                                     </div>
                                 </div>
@@ -128,7 +128,7 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <div class="panel-title">
-                                        <h4>Raw File Snapshot</h4>
+                                        <h4>Optionen</h4>
                                     </div>
                                 </div>
                                 <div class="panel-body" style="height: 300px;">
@@ -138,7 +138,7 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <div class="panel-title">
-                                        <h4>Program Operations</h4>
+                                        <h4>Aktionen</h4>
                                     </div>
                                 </div>
                                 <div class="panel-body">
@@ -206,7 +206,7 @@
                         <div id="hidden-panel" class="panel panel-default" hidden>
                             <div class="panel-heading">
                                 <div class="panel-title">
-                                    <h4>Measurement Points</h4>
+                                    <h4>Messpunkte</h4>
                                 </div>
                             </div>
                             <div class="panel-body">
