--- a/projectpicker.html
+++ b/projectpicker.html
@@ -19,24 +19,24 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <div class="panel-title">
-                        <h4>Parameters</h4>
+                        <h4>Projektbrowser</h4>
                     </div>
                 </div>
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-6 picker-left">
-                            <h3>Projects</h3>
+                            <h3>Projekte</h3>
                             <ul id="projects">
-                                <li class="project"><a href="index.html">Project1<br><span>/home/foo/bar</span></a></li>
-                                <li class="project"><a href="index.html">Project2<br><span>/home/foo/bar</span></a></li>
-                                <li class="project"><a href="index.html">Project3<br><span>/home/foo/bar</span></a></li>
+                                <li class="project"><a href="index.html">Projekt 1<br><span>/home/foo/bar</span></a></li>
+                                <li class="project"><a href="index.html">Projekt 2<br><span>/home/foo/bar2</span></a></li>
+                                <li class="project"><a href="index.html">Projekt 3<br><span>/home/foo/bar3</span></a></li>
                             </ul>
                         </div>
                         <div class="col-md-6 picker-right">
                             <h1>VPLAN</h1>
                             <div class="options">
-                                <a class="btn btn-default btn-block" href="index.html">Open Project</a>
-                                <a class="btn btn-default btn-block" href="index.html">Checkout from VCS</a>
+                                <a class="btn btn-default btn-block" href="index.html">Projekt öffnen</a>
+                                <a class="btn btn-default btn-block" href="index.html">Aus Versionskontrollsystem auschecken</a>
                                 <a id="new project" class="btn btn-success btn-block" href="index.html" role="button">Neues Projekt</a>
                             </div>             
                     </div>
