--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <div class="panel-title">
-                                        <h4>Parameter</h4>
+                                        <h4 data-toggle="tooltip" data-placement="right" title="Erlaubt das setzen der Parameter für das Experiment">Parameter</h4>
                                     </div>
                                 </div>
                                 <div class="panel-body">
@@ -128,7 +128,7 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <div class="panel-title">
-                                        <h4>Optionen</h4>
+                                        <h4 data-toggle="tooltip"  data-placement="right" title="Selten benutzte Optionen, für die keine Toolbox existiert">Optionen</h4>
                                     </div>
                                 </div>
                                 <div class="panel-body" style="height: 300px;">
@@ -138,7 +138,8 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <div class="panel-title">
-                                        <h4>Aktionen</h4>
+                                        <h4 data-toggle="tooltip"  data-placement="right" title="Aktionen und deren Reihenfolge festlegen">Aktionen</h4>
+
                                     </div>
                                 </div>
                                 <div class="panel-body">
@@ -206,7 +207,7 @@
                         <div id="hidden-panel" class="panel panel-default" hidden>
                             <div class="panel-heading">
                                 <div class="panel-title">
-                                    <h4>Messpunkte</h4>
+                                    <h4  data-toggle="tooltip"  data-placement="right" title="Festlegen, wie die Messpunkte definiert werden (Diskretisierung)">Messpunkte</h4>
                                 </div>
                             </div>
                             <div class="panel-body">
@@ -255,7 +256,7 @@
                             </div> 
                     </div>
 
-                        <button id="add-tool" type="button" class="btn btn-success" data-toggle="modal" data-target="#toolBoxModal">
+                        <button id="add-tool"  data-placement="right" title="Das hinzufügen einer Toolbox erlaubt die Kontrolle weiterer Parameter" type="button" class="btn btn-success" data-toggle="modal" data-target="#toolBoxModal">
                         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                         Add Tool
                     </button>
@@ -373,22 +374,22 @@
                                         <td>10815</td>
                                     </tr>
                                     <tr>
-                                        <td>Paramters</td>
+                                        <td>Paramter</td>
                                         <td>VPLAN</td>
                                         <td>851</td>
                                     </tr>
                                     <tr>
-                                        <td>Measurement Points</td>
+                                        <td>Messpunkte</td>
                                         <td>VPLAN</td>
                                         <td>105</td>
                                     </tr>
 									<tr>
-                                        <td>Raw File Snapshot</td>
+                                        <td>Optionen</td>
                                         <td>VPLAN</td>
                                         <td>60</td>
                                     </tr>
                                     <tr>
-                                        <td>Program Operations</td>
+                                        <td>Aktionen</td>
                                         <td>VPLAN</td>
                                         <td>58</td>
                                     </tr>
