--- a/index.html
+++ b/index.html
@@ -269,8 +269,17 @@
 
                     <div class="section-content">
                         <ul class="nav nav-tabs">
-                          <li class="active"><a data-toggle="tab" href="#graph">Graph</a></li>
-                          <li><a data-toggle="tab" href="#values">Values</a></li>
+                            <li class="active"><a data-toggle="tab" href="#graph">Graph</a></li>
+                            <li><a data-toggle="tab" href="#values">Values</a></li>
+                            <div class="run-panel">
+                                <div class="checkbox">
+                                    <label><input type="checkbox">Auto Update</label>
+                                </div>
+                                <a href="#" class="btn btn-default btn-success" role="button">
+                                    <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+                                    Ausführen
+                                </a>
+                            </div>
                         </ul>
 
                         <div class="tab-content">
