translate remainig texts to german

--- a/modelbrowser.html
+++ b/modelbrowser.html
@@ -14,7 +14,7 @@
 <body>
     <div class="modelbrowser container">
         <h1>
-            Create Project from existing Model
+            Neues Projekt für ein existierendes Model erstellen
         </h1>
         <div class="row vertical-align">
             <div class="col-md-6">
@@ -25,13 +25,13 @@
             <div class="col-md-3">
                 <div class="dropdown">
                     <button class="btn btn-default dropdown-toggle" type="button" id="dropdownCategory" data-toggle="dropdown" aria-haspopup="true">
-                        All Categories
+                        All Kategorien
                         <span class="caret"></span>
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                        <li><a href="#">Diseases</a></li>
-                        <li><a href="#">Reactions</a></li>
-                        <li><a href="#">Therapies</a></li>
+                        <li><a href="#">Krankheiten</a></li>
+                        <li><a href="#">Reaktionen</a></li>
+                        <li><a href="#">Therapie</a></li>
                     </ul>
                 </div>
             </div>
@@ -97,9 +97,9 @@
             </div>
             <div class="col-md-5">
                 <div class="actions">
-                    <a href="index.html" type="button" class="btn btn-default btn-success">Create Project</a>
-                    <a href="index.html" type="button" class="btn btn-default btn-success">Open Local Model</a>
-                    <a href="index.html" type="button" class="btn btn-default btn-secondary">Cancel</a>
+                    <a href="index.html" type="button" class="btn btn-default btn-success">Projekt erstellen</a>
+                    <a href="index.html" type="button" class="btn btn-default btn-success">Lokales Model öffnen</a>
+                    <a href="index.html" type="button" class="btn btn-default btn-secondary">Abbechen</a>
                 </div>
             </div>
         </div>
