Add Loading animation to run panel, style parameter list inputs

--- a/index.html
+++ b/index.html
@@ -109,18 +109,21 @@
                                         </div>
                                     <form id="params">
                                         <div id="empty-param" class="row form-group param" hidden>
-                                            <div class="col-md-2"><input class="form-control name-field" type="text" size="1" value=""></div>
-                                            <div class="col-md-1"><input class="form-control" type="text" size="1" value=0></div>
-                                            <div class="col-md-4"><input class="form-control" type="range" name="points" min="0" max="10" step="1"></div>
-                                            <div class="col-md-1"><input class="form-control" type="text" name="points-value" value="5" size="1"></div>
-                                            <div class="col-md-1"><input class="form-control" type="text" value="10" size="1"></div>
-                                            <div class="col-md-1"><input class="form-control" type="text" value="1" size="1"></div>
-                                            <div class="col-md-1"><input class="btn btn-danger remove-param" type="button" value="entfernen"></div>
+                                            <div class="param-data col-md-2"><input class="form-control name-field" type="text" size="1" value=""></div>
+                                            <div class="param-data col-md-1"><input class="form-control" type="number" size="1" value=0></div>
+                                            <div class="param-data col-md-4"><input class="form-control" type="range" name="points" min="0" max="10" step="1"></div>
+                                            <div class="param-data col-md-1"><input class="form-control" type="number" name="points-value" value="5" size="1"></div>
+                                            <div class="param-data col-md-1"><input class="form-control" type="number" value="10" size="1"></div>
+                                            <div class="param-data col-md-1"><input class="form-control" type="number" value="1" size="1"></div>
+                                            <div class="param-data col-md-2"><input class="btn btn-danger remove-param" type="button" value="entfernen"></div>
                                         </div>
                                     </form>
                                     <div class="row">
-                                        <div class="col-md-3">
-                                            <button type="button" id="add-param" class="btn btn-success btn-block"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Parameter hinzufügen</button>
+                                        <div class="col-md-12">
+                                            <button type="button" id="add-param" class="btn btn-success">
+                                                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                                                Parameter hinzufügen
+                                            </button>
                                         </div>
                                     </div>
                                 </div>
@@ -273,7 +276,7 @@
                             <li><a data-toggle="tab" href="#values">Values</a></li>
                             <div class="run-panel">
                                 <div class="checkbox">
-                                    <label><input type="checkbox">Auto Update</label>
+                                    <label><input type="checkbox">Automatisch ausführen</label>
                                 </div>
                                 <a href="#" class="btn btn-default btn-success" role="button">
                                     <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
